--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
 
       /* Custom animations for juice feedback */
       @keyframes pop-in {
-        0% { transform: scale(0); opacity: 0; }
-        80% { transform: scale(1.1); opacity: 1; }
+        0% { transform: scale(0.8); opacity: 0; }
+        80% { transform: scale(1.05); opacity: 1; }
         100% { transform: scale(1); opacity: 1; }
       }
       
       .animate-pop {
-        animation: pop-in 0.3s ease-out forwards;
+        animation: pop-in 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+      }
+
+      @keyframes shake {
+        0%, 100% { transform: translateX(0); }
+        25% { transform: translateX(-8px); }
+        75% { transform: translateX(8px); }
+      }
+
+      .animate-shake {
+        animation: shake 0.2s ease-in-out infinite;
       }
 
       /* Bubbles animation */
